# android-native-lib

./: README.md  password.jks  settings.gradle
app/: CMakeLists.txt  app-release.apk  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/protech/demonative/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: NativeCode.cpp
app/src/main/java/com/protech/demonative/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/protech/demonative/: ExampleUnitTest.java
extmath/: CMakeLists.txt
extmath/include/: DumbCalc.h
extmath/src/: DumbCalc.cpp  ExtMath.cpp
extsmath/: CMakeLists.txt
extsmath/include/: SuperCalc.h
extsmath/src/: SuperCalc.cpp
gradle/wrapper/: gradle-wrapper.properties
smartcalc/: CMakeLists.txt  build.gradle
smartcalc/src/main/: AndroidManifest.xml
smartcalc/src/main/cpp/: SmartCalc.cpp  com_protech_mix_SmartCalc.c  com_protech_mix_SmartCalc.h
smartcalc/src/main/java/com/protech/mix/: SmartCalc.java  SmartCalcListener.java  SmartCalcLogger.java
